added scrollbar for buttons

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "4da20ea5-da64-4493-94c4-e0b253074d38",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import os\n",
     "import tkinter as tk\n",
     "from tkinter import ttk, filedialog, messagebox, simpledialog, Listbox, Scrollbar\n",
-    "from PIL import Image, ImageTk  # For icons"
+    "from PIL import Image, ImageTk  # For icons\n",
+    "import visualization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "7949ff76-c698-46a0-91ec-ec7fd7946004",
    "metadata": {},
    "outputs": [],
@@ -46,16 +47,54 @@
     "        scrollbar = Scrollbar(list_frame, command=self.listbox.yview)\n",
     "        scrollbar.pack(side=\"right\", fill=\"y\")\n",
     "        self.listbox.config(yscrollcommand=scrollbar.set)\n",
-    "\n",
-    "        # Buttons Frame\n",
+    "        \n",
+    "        # Buttons Frame (Fixed - Does NOT scroll)\n",
     "        btn_frame = ttk.Frame(root, padding=10)\n",
     "        btn_frame.pack(fill=\"x\")\n",
     "\n",
+    "        # Main Action Buttons (Fixed)\n",
     "        ttk.Button(btn_frame, text=\"📄 Create File\", command=self.create_file).pack(side=\"left\", padx=5)\n",
     "        ttk.Button(btn_frame, text=\"📁 Create Folder\", command=self.create_folder).pack(side=\"left\", padx=5)\n",
     "        ttk.Button(btn_frame, text=\"✏️ Rename\", command=self.rename_selected).pack(side=\"left\", padx=5)\n",
     "        ttk.Button(btn_frame, text=\"🗑 Delete\", command=self.delete_selected).pack(side=\"left\", padx=5)\n",
     "\n",
+    "\n",
+    "        # Visualization Buttons Frame with Horizontal Scrolling\n",
+    "        vis_container = ttk.Frame(root, padding=10)\n",
+    "        vis_container.pack(fill=\"x\")\n",
+    "\n",
+    "        # Create a Canvas for scrolling\n",
+    "        canvas = tk.Canvas(vis_container, height=40)\n",
+    "        canvas.pack(side=\"top\", fill=\"x\", expand=True)\n",
+    "\n",
+    "        # Add Horizontal Scrollbar\n",
+    "        h_scrollbar = ttk.Scrollbar(vis_container, orient=\"horizontal\", command=canvas.xview)\n",
+    "        h_scrollbar.pack(side=\"bottom\", fill=\"x\")\n",
+    "\n",
+    "        # Configure Canvas for Horizontal Scrolling\n",
+    "        canvas.configure(xscrollcommand=h_scrollbar.set)\n",
+    "        canvas.bind(\"<Configure>\", lambda e: canvas.configure(scrollregion=canvas.bbox(\"all\")))\n",
+    "\n",
+    "        # Frame inside Canvas to hold Visualization Buttons\n",
+    "        vis_frame = ttk.Frame(canvas)\n",
+    "        canvas.create_window((0, 0), window=vis_frame, anchor=\"nw\")\n",
+    "\n",
+    "        # Add Visualization Buttons inside Scrollable Frame\n",
+    "        vis_buttons = [\n",
+    "            (\"📊 File Type Distribution\", lambda: visualization.DirectoryVisualizer.visualize_file_types_static(self.selected_dir.get())),\n",
+    "            (\"📈 Largest Folders\", lambda: visualization.DirectoryVisualizer.visualize_folder_sizes_static(self.selected_dir.get())),\n",
+    "            (\"📂 Largest Files\", lambda: visualization.DirectoryVisualizer.visualize_largest_files(self.selected_dir.get())),\n",
+    "            (\"📅 File Age Analysis\", lambda: visualization.DirectoryVisualizer.visualize_file_ages_static(self.selected_dir.get())),\n",
+    "            (\"🔍 Find Duplicates\", lambda: visualization.DirectoryVisualizer.detect_duplicate_files(self.selected_dir.get()))\n",
+    "        ]\n",
+    "\n",
+    "        for text, command in vis_buttons:\n",
+    "            ttk.Button(vis_frame, text=text, command=command).pack(side=\"left\", padx=5, pady=2)\n",
+    "\n",
+    "        # Ensure scrolling works with mouse wheel (horizontal scroll)\n",
+    "        vis_frame.bind(\"<Enter>\", lambda e: root.bind_all(\"<Shift-MouseWheel>\", lambda event: canvas.xview_scroll(-1 * (event.delta // 120), \"units\")))\n",
+    "        vis_frame.bind(\"<Leave>\", lambda e: root.unbind_all(\"<Shift-MouseWheel>\"))\n",
+    "        \n",
     "        # Exit Button\n",
     "        ttk.Button(root, text=\"🚪 Exit\", command=self.exit_app, style=\"Exit.TButton\").pack(pady=10)\n",
     "\n",
@@ -79,8 +118,9 @@
     "        if file_name:\n",
     "            file_path = os.path.join(self.selected_dir.get(), file_name)\n",
     "            try:\n",
-    "                open(file_path, 'w').close()\n",
-    "                self.refresh_list()\n",
+    "                with open(file_path, \"w\") as f:\n",
+    "                    f.write(\"\")  # Create an empty file\n",
+    "                messagebox.showinfo(\"Success\", f\"File '{file_name}' created successfully!\")\n",
     "            except Exception as e:\n",
     "                messagebox.showerror(\"Error\", str(e))\n",
     "\n",
@@ -89,10 +129,11 @@
     "        if folder_name:\n",
     "            folder_path = os.path.join(self.selected_dir.get(), folder_name)\n",
     "            try:\n",
-    "                os.makedirs(folder_path)\n",
-    "                self.refresh_list()\n",
+    "                os.makedirs(folder_path, exist_ok=True)\n",
+    "                messagebox.showinfo(\"Success\", f\"Folder '{folder_name}' created successfully!\")\n",
     "            except Exception as e:\n",
     "                messagebox.showerror(\"Error\", str(e))\n",
+    "                \n",
     "    def rename_selected(self):\n",
     "        selected = self.listbox.curselection()\n",
     "        if not selected:\n",
@@ -120,7 +161,7 @@
     "        \n",
     "        item_name = self.listbox.get(selected)\n",
     "        item_path = os.path.join(self.selected_dir.get(), item_name)\n",
-    "        confirm = messagebox.askyesno(\"Delete\", f\"Delete '{item_name}'?\")\n",
+    "        confirm = messagebox.askyesno(\"Confirm Delete\", \"Are you sure you want to delete this?\")\n",
     "        \n",
     "        if confirm:\n",
     "            try:\n",
@@ -141,20 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "3c9731f7-ab8b-4c34-bc5e-6965b1553a76",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-03-22 11:43:37.424 Python[60576:3806513] +[IMKClient subclass]: chose IMKClient_Modern\n",
-      "2025-03-22 11:43:37.424 Python[60576:3806513] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Run the Tkinter application\n",
     "if __name__ == \"__main__\":\n",
     "    root = tk.Tk()\n",
     "    app = DirectoryManager(root)\n",
@@ -164,9 +197,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (myenv)",
    "language": "python",
-   "name": "python3"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
