Added Feature to open files/folder

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4da20ea5-da64-4493-94c4-e0b253074d38",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,14 @@
     "import tkinter as tk\n",
     "from tkinter import ttk, filedialog, messagebox, simpledialog, Listbox, Scrollbar\n",
     "from PIL import Image, ImageTk  # For icons\n",
-    "import visualization"
+    "import visualization\n",
+    "import subprocess  # Added for opening files (Line 9)\n",
+    "import platform "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7949ff76-c698-46a0-91ec-ec7fd7946004",
    "metadata": {},
    "outputs": [],
@@ -53,6 +55,8 @@
     "        btn_frame.pack(fill=\"x\")\n",
     "\n",
     "        # Main Action Buttons (Fixed)\n",
+    "        \n",
+    "        ttk.Button(btn_frame, text=\"📂 Open\", command=self.open_selected).pack(side=\"left\", padx=5)\n",
     "        ttk.Button(btn_frame, text=\"📄 Create File\", command=self.create_file).pack(side=\"left\", padx=5)\n",
     "        ttk.Button(btn_frame, text=\"📁 Create Folder\", command=self.create_folder).pack(side=\"left\", padx=5)\n",
     "        ttk.Button(btn_frame, text=\"✏️ Rename\", command=self.rename_selected).pack(side=\"left\", padx=5)\n",
@@ -172,6 +176,30 @@
     "                self.refresh_list()\n",
     "            except Exception as e:\n",
     "                messagebox.showerror(\"Error\", str(e))\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def open_selected(self):  # (🔹 Line 95)\n",
+    "       \n",
+    "        selected = self.listbox.curselection()\n",
+    "        if not selected:\n",
+    "            messagebox.showwarning(\"Warning\", \"No file/folder selected!\")\n",
+    "            return\n",
+    "\n",
+    "        item_name = self.listbox.get(selected)\n",
+    "        item_path = os.path.join(self.selected_dir.get(), item_name)\n",
+    "\n",
+    "        try:\n",
+    "            if platform.system() == \"Windows\":\n",
+    "                os.startfile(item_path)\n",
+    "            elif platform.system() == \"Darwin\":  # macOS\n",
+    "                subprocess.call([\"open\", item_path])\n",
+    "            else:  # Linux\n",
+    "                subprocess.call([\"xdg-open\", item_path])\n",
+    "        except Exception as e:\n",
+    "            messagebox.showerror(\"Error\", str(e))\n",
+    "\n",
+    "\n",
     "\n",
     "    def exit_app(self):\n",
     "        confirm_exit = messagebox.askyesno(\"Exit\", \"Are you sure you want to exit?\")\n",
