added ai_ml module

--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -175,7 +175,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook visualization.ipynb to script\n",
-      "[NbConvertApp] Writing 2489 bytes to visualization.py\n"
+      "[NbConvertApp] Writing 5482 bytes to visualization.py\n"
      ]
     }
    ],
@@ -186,9 +186,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (myenv)",
    "language": "python",
-   "name": "python3"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
