Added feature to toggle Dark/Light Mode

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -61,6 +61,7 @@
     "        ttk.Button(btn_frame, text=\"📁 Create Folder\", command=self.create_folder).pack(side=\"left\", padx=5)\n",
     "        ttk.Button(btn_frame, text=\"✏️ Rename\", command=self.rename_selected).pack(side=\"left\", padx=5)\n",
     "        ttk.Button(btn_frame, text=\"🗑 Delete\", command=self.delete_selected).pack(side=\"left\", padx=5)\n",
+    "        ttk.Button(root, text=\"🌙 Toggle Dark Mode\", command=self.toggle_theme).pack(pady=5)  #Added Toggle Dark Mode Button\n",
     "\n",
     "\n",
     "        # Visualization Buttons Frame with Horizontal Scrolling\n",
@@ -198,6 +199,24 @@
     "                subprocess.call([\"xdg-open\", item_path])\n",
     "        except Exception as e:\n",
     "            messagebox.showerror(\"Error\", str(e))\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def toggle_theme(self):  # Added Dark Mode Toggle Feature\n",
+    "       \n",
+    "        dark_mode = self.root.option_get(\"dark_mode\", \"0\") == \"1\"\n",
+    "        \n",
+    "        if dark_mode:\n",
+    "            self.root.tk_setPalette(background=\"#f0f0f0\", foreground=\"black\")\n",
+    "            self.listbox.config(bg=\"white\", fg=\"black\")\n",
+    "        else:\n",
+    "            self.root.tk_setPalette(background=\"#2e2e2e\", foreground=\"white\")\n",
+    "            self.listbox.config(bg=\"#333\", fg=\"white\")\n",
+    "        \n",
+    "        self.root.option_add(\"*TButton*foreground\", \"white\" if not dark_mode else \"black\")\n",
+    "        self.root.option_add(\"*TButton*background\", \"#555\" if not dark_mode else \"#ddd\")\n",
+    "        self.root.option_add(\"*dark_mode\", \"1\" if not dark_mode else \"0\")\n",
+    "\n",
     "\n",
     "\n",
     "\n",
