💬Added feature: File Size & Type Display in Listbox

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -109,12 +109,15 @@
     "            self.selected_dir.set(dir_path)\n",
     "            self.refresh_list()\n",
     "\n",
-    "    def refresh_list(self):\n",
+    "     def refresh_list(self):\n",
     "        self.listbox.delete(0, tk.END)\n",
     "        path = self.selected_dir.get()\n",
     "        try:\n",
     "            for item in os.listdir(path):\n",
-    "                self.listbox.insert(tk.END, item)\n",
+    "                item_path = os.path.join(path, item)\n",
+    "                size = os.path.getsize(item_path) if os.path.isfile(item_path) else 0  \n",
+    "                item_type = \"📄\" if os.path.isfile(item_path) else \"📁\"  \n",
+    "                self.listbox.insert(tk.END, f\"{item_type} {item} ({size} bytes)\") \n",
     "        except Exception as e:\n",
     "            messagebox.showerror(\"Error\", str(e))\n",
     "\n",
