💬Bug Fix: Prevented Duplicate File/Folder Creation

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -125,6 +125,9 @@
     "        file_name = simpledialog.askstring(\"Create File\", \"Enter file name:\")\n",
     "        if file_name:\n",
     "            file_path = os.path.join(self.selected_dir.get(), file_name)\n",
+    "            if os.path.exists(file_path):  #checks if there are files with the same name\n",
+    "                messagebox.showwarning(\"Warning\", f\"'{file_name}' already exists!\")  \n",
+    "                return\n",
     "            try:\n",
     "                with open(file_path, \"w\") as f:\n",
     "                    f.write(\"\")  # Create an empty file\n",
@@ -136,6 +139,9 @@
     "        folder_name = simpledialog.askstring(\"Create Folder\", \"Enter folder name:\")\n",
     "        if folder_name:\n",
     "            folder_path = os.path.join(self.selected_dir.get(), folder_name)\n",
+    "            if os.path.exists(folder_path):  #checks if folder with the same name exists\n",
+    "                messagebox.showwarning(\"Warning\", f\"'{folder_name}' already exists!\")  \n",
+    "                return\n",
     "            try:\n",
     "                os.makedirs(folder_path, exist_ok=True)\n",
     "                messagebox.showinfo(\"Success\", f\"Folder '{folder_name}' created successfully!\")\n",
