💬 Usability Improvement: Added Keyboard Shortcuts

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -30,6 +30,15 @@
     "        self.root.geometry(\"600x500\")\n",
     "        self.root.configure(bg=\"#f0f0f0\")\n",
     "\n",
+    "\n",
+    "        # 🔹 Add Keyboard Shortcuts \n",
+    "        self.root.bind(\"<Control-n>\", lambda e: self.create_file())       # Ctrl + N for new file\n",
+    "        self.root.bind(\"<Control-Shift-N>\", lambda e: self.create_folder())  # Ctrl + Shift + N for folder\n",
+    "        self.root.bind(\"<Delete>\", lambda e: self.delete_selected())      # Delete key\n",
+    "        self.root.bind(\"<Control-r>\", lambda e: self.rename_selected())   # Ctrl + R for rename\n",
+    "        self.root.bind(\"<Control-q>\", lambda e: self.exit_app())          # Ctrl + Q for exit\n",
+    "\n",
+    "\n",
     "        # Directory Selection\n",
     "        self.selected_dir = tk.StringVar(value=os.getcwd())\n",
     "\n",
