--- a/interface.ipynb
+++ b/interface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4da20ea5-da64-4493-94c4-e0b253074d38",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,13 @@
     "from PIL import Image, ImageTk  # For icons\n",
     "import visualization\n",
     "import subprocess  # Added for opening files (Line 9)\n",
-    "import platform "
+    "import platform \n",
+    "from ai import AIModule"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7949ff76-c698-46a0-91ec-ec7fd7946004",
    "metadata": {},
    "outputs": [],
@@ -29,6 +30,7 @@
     "        self.root.title(\"🗂 Directory Manager\")\n",
     "        self.root.geometry(\"600x500\")\n",
     "        self.root.configure(bg=\"#f0f0f0\")\n",
+    "        self.ai_module = AIModule()\n",
     "\n",
     "\n",
     "        # 🔹 Add Keyboard Shortcuts \n",
@@ -65,13 +67,24 @@
     "\n",
     "        # Main Action Buttons (Fixed)\n",
     "        \n",
+    "        ttk.Button(root, text=\"🌙 Toggle Dark Mode\", command=self.toggle_theme).pack(pady=5)  #Added Toggle Dark Mode Button\n",
     "        ttk.Button(btn_frame, text=\"📂 Open\", command=self.open_selected).pack(side=\"left\", padx=5)\n",
     "        ttk.Button(btn_frame, text=\"📄 Create File\", command=self.create_file).pack(side=\"left\", padx=5)\n",
     "        ttk.Button(btn_frame, text=\"📁 Create Folder\", command=self.create_folder).pack(side=\"left\", padx=5)\n",
     "        ttk.Button(btn_frame, text=\"✏️ Rename\", command=self.rename_selected).pack(side=\"left\", padx=5)\n",
     "        ttk.Button(btn_frame, text=\"🗑 Delete\", command=self.delete_selected).pack(side=\"left\", padx=5)\n",
-    "        ttk.Button(root, text=\"🌙 Toggle Dark Mode\", command=self.toggle_theme).pack(pady=5)  #Added Toggle Dark Mode Button\n",
+    "        \n",
+    "        \n",
+    "        # Add AI Buttons in GUI\n",
+    "        ai_frame = ttk.Frame(root, padding=10)\n",
+    "        ai_frame.pack(fill=\"x\")\n",
     "\n",
+    "        ttk.Button(ai_frame, text=\"🤖 Train AI Model\", command=self.train_ai_model).pack(side=\"left\", padx=5)\n",
+    "        ttk.Button(ai_frame, text=\"📂 Categorize Files\", command=self.categorize_files).pack(side=\"left\", padx=5)\n",
+    "        ttk.Button(ai_frame, text=\"🔮 Predict Usage\", command=self.predict_usage).pack(side=\"left\", padx=5)\n",
+    "        ttk.Button(ai_frame, text=\"🔍 Smart Search\", command=self.smart_search).pack(side=\"left\", padx=5)\n",
+    "\n",
+    "        \n",
     "\n",
     "        # Visualization Buttons Frame with Horizontal Scrolling\n",
     "        vis_container = ttk.Frame(root, padding=10)\n",
@@ -118,7 +131,7 @@
     "            self.selected_dir.set(dir_path)\n",
     "            self.refresh_list()\n",
     "\n",
-    "     def refresh_list(self):\n",
+    "    def refresh_list(self):\n",
     "        self.listbox.delete(0, tk.END)\n",
     "        path = self.selected_dir.get()\n",
     "        try:\n",
@@ -217,6 +230,25 @@
     "                subprocess.call([\"xdg-open\", item_path])\n",
     "        except Exception as e:\n",
     "            messagebox.showerror(\"Error\", str(e))\n",
+    "            \n",
+    "            \n",
+    "    def train_ai_model(self):\n",
+    "        message = self.ai_module.train_model(os.listdir(self.selected_dir.get()))\n",
+    "        messagebox.showinfo(\"AI Training\", message)\n",
+    "\n",
+    "    def categorize_files(self):\n",
+    "        categorized = self.ai_module.categorize_files(os.listdir(self.selected_dir.get()))\n",
+    "        messagebox.showinfo(\"AI Categorization\", str(categorized))\n",
+    "\n",
+    "    def predict_usage(self):\n",
+    "        usage = self.ai_module.predict_file_usage(self.selected_dir.get())\n",
+    "        messagebox.showinfo(\"File Usage Patterns\", str(usage))\n",
+    "\n",
+    "    def smart_search(self):\n",
+    "        query = simpledialog.askstring(\"Smart Search\", \"Enter search term:\")\n",
+    "        if query:\n",
+    "            results = self.ai_module.smart_search(self.selected_dir.get(), query)\n",
+    "            messagebox.showinfo(\"Search Results\", \"\\n\".join(results) if results else \"No matching files found.\")\n",
     "\n",
     "\n",
     "\n",
@@ -247,10 +279,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "3c9731f7-ab8b-4c34-bc5e-6965b1553a76",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-03-28 19:43:14.739 Python[80998:4559272] +[IMKClient subclass]: chose IMKClient_Modern\n",
+      "2025-03-28 19:43:14.739 Python[80998:4559272] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/nltk/corpus/util.py\", line 84, in __load\n",
+      "    root = nltk.data.find(f\"{self.subdir}/{zip_name}\")\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/nltk/data.py\", line 579, in find\n",
+      "    raise LookupError(resource_not_found)\n",
+      "LookupError: \n",
+      "**********************************************************************\n",
+      "  Resource \u001b[93mstopwords\u001b[0m not found.\n",
+      "  Please use the NLTK Downloader to obtain the resource:\n",
+      "\n",
+      "  \u001b[31m>>> import nltk\n",
+      "  >>> nltk.download('stopwords')\n",
+      "  \u001b[0m\n",
+      "  For more information see: https://www.nltk.org/data.html\n",
+      "\n",
+      "  Attempted to load \u001b[93mcorpora/stopwords.zip/stopwords/\u001b[0m\n",
+      "\n",
+      "  Searched in:\n",
+      "    - '/Users/nyasavishwas/nltk_data'\n",
+      "    - '/Library/Frameworks/Python.framework/Versions/3.13/nltk_data'\n",
+      "    - '/Library/Frameworks/Python.framework/Versions/3.13/share/nltk_data'\n",
+      "    - '/Library/Frameworks/Python.framework/Versions/3.13/lib/nltk_data'\n",
+      "    - '/usr/share/nltk_data'\n",
+      "    - '/usr/local/share/nltk_data'\n",
+      "    - '/usr/lib/nltk_data'\n",
+      "    - '/usr/local/lib/nltk_data'\n",
+      "**********************************************************************\n",
+      "\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/tkinter/__init__.py\", line 2068, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ~~~~~~~~~^^^^^^^\n",
+      "  File \"/var/folders/_0/0c4094z9565bw7nfmc1t21rh0000gn/T/ipykernel_80998/3344300521.py\", line 210, in train_ai_model\n",
+      "    message = self.ai_module.train_model(os.listdir(self.selected_dir.get()))\n",
+      "  File \"/Users/nyasavishwas/Directory Management System/AI-Powered-Directory-Management-System/ai.py\", line 57, in train_model\n",
+      "    features = self.extract_features(file_list)\n",
+      "  File \"/Users/nyasavishwas/Directory Management System/AI-Powered-Directory-Management-System/ai.py\", line 43, in extract_features\n",
+      "    stop_words = set(stopwords.words(\"english\"))\n",
+      "                     ^^^^^^^^^^^^^^^\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/nltk/corpus/util.py\", line 120, in __getattr__\n",
+      "    self.__load()\n",
+      "    ~~~~~~~~~~~^^\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/nltk/corpus/util.py\", line 86, in __load\n",
+      "    raise e\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/nltk/corpus/util.py\", line 81, in __load\n",
+      "    root = nltk.data.find(f\"{self.subdir}/{self.__name}\")\n",
+      "  File \"/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/nltk/data.py\", line 579, in find\n",
+      "    raise LookupError(resource_not_found)\n",
+      "LookupError: \n",
+      "**********************************************************************\n",
+      "  Resource \u001b[93mstopwords\u001b[0m not found.\n",
+      "  Please use the NLTK Downloader to obtain the resource:\n",
+      "\n",
+      "  \u001b[31m>>> import nltk\n",
+      "  >>> nltk.download('stopwords')\n",
+      "  \u001b[0m\n",
+      "  For more information see: https://www.nltk.org/data.html\n",
+      "\n",
+      "  Attempted to load \u001b[93mcorpora/stopwords\u001b[0m\n",
+      "\n",
+      "  Searched in:\n",
+      "    - '/Users/nyasavishwas/nltk_data'\n",
+      "    - '/Library/Frameworks/Python.framework/Versions/3.13/nltk_data'\n",
+      "    - '/Library/Frameworks/Python.framework/Versions/3.13/share/nltk_data'\n",
+      "    - '/Library/Frameworks/Python.framework/Versions/3.13/lib/nltk_data'\n",
+      "    - '/usr/share/nltk_data'\n",
+      "    - '/usr/local/share/nltk_data'\n",
+      "    - '/usr/lib/nltk_data'\n",
+      "    - '/usr/local/lib/nltk_data'\n",
+      "**********************************************************************\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the Tkinter application\n",
     "if __name__ == \"__main__\":\n",
